src/applications/primo/custom-styles.scss
@import 'includes/fonts';
@import 'includes/colours';

:root, html, head, body {
  --mat-expansion-container-shape: 4px;
  --uq-border-radius: 0.25rem;
}

$utility-500: var(--uq-color-utility-500);
$uqBrandColour: var(--uq-colour-purple-500);
$uq-body-font-family: Roboto, Helvetica, Arial, sans-serif;
@mixin uqPrimaryButton() {
  background-color: $uqBrandColour !important;
  border: 2px solid $uqBrandColour;
  border-radius: var(--uq-border-radius);
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  gap: 0.75rem;
  font-family: $uq-body-font-family;
  font-size: 1rem; /* 16px - Body, H6 */;
  font-weight: 500;
  line-height: 1;
  padding: 1rem 1.5rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 200ms ease-out, color 200ms ease-out, border 200ms ease-out;
  background-image: none;

  &.mat-mdc-button-disabled {
    opacity: 50%;
  }

  &:hover {
    background-color: #fff !important;
    border-color: $uqBrandColour;
    color: $uqBrandColour;
    text-decoration: underline;
  }
  &:focus {
    outline: 2px solid $utility-500;
    outline-offset: 0;
  }
}
@mixin uqSecondaryButton() {
  @include uqPrimaryButton();
  background-color: rgba(0, 0, 0, 0) !important;
  border-color: $uqBrandColour;
  color: $uqBrandColour;
  &:hover {
    background-color: $uqBrandColour !important;
    border-color: $uqBrandColour;
    color: #fff;
    mat-icon path {
      fill: #fff;
    }
  }
}

/* make the white bar in uq-site-header the right height */
uq-site-header::part(root) {
  height: 41px;
  margin-top: 10px;
}

body.custom-nde-theme {

  @import 'includes/components/cdk-virtual-scroll-viewport.scss';

  @import 'includes/components/mat-card.scss';

  @import 'includes/components/mat-dialog-container.scss';

  @import 'includes/components/mat-form-field.scss';

  @import 'includes/components/nde-account.scss';

  @import 'includes/components/nde-advanced-search.scss';

  @import 'includes/components/nde-back-to-top.scss';

  @import 'includes/components/nde-carousel.scss';

  @import 'includes/components/nde-collection-discovery-container.scss';

  @import 'includes/components/nde-controlled-vocabulary.scss';

  @import 'includes/components/nde-favoritesapp.scss';

  @import 'includes/components/nde-fetch-item.scss';

  @import 'includes/components/nde-fines-overview';

  @import 'includes/components/nde-general-search-header.scss';

  @import 'includes/components/nde-get-it';

  @import 'includes/components/nde-journal-database-layout-component';

  @import 'includes/components/nde-linked-data-recommendation';

  @import 'includes/components/nde-loan-item';

  @import 'includes/components/nde-locations-container';

  @import 'includes/components/nde-main-menu';

  @import 'includes/components/nde-natural-language-search-dialog.scss';

  @import 'includes/components/nde-notification.scss';

  @import 'includes/components/nde-record-availability';

  @import 'includes/components/nde-record-citations-and-times-cited';

  @import 'includes/components/nde-requests';

  @import 'includes/components/nde-search-filters-side-nav';

  @import 'includes/components/nde-search-results-pagination.scss';

  @import 'includes/components/search-results-wrapper';

  @import 'includes/components/nde-sort-by';

  @import 'includes/components/nde-top-bar';

  @import 'includes/components/nde-user-area';

  /* custom entries */
  @import 'includes/components/course_reading_list';
  @import 'includes/components/content_indicator_icon';

  @import 'includes/components/page_width';

  @import 'includes/components/report_a_problem';

  /* buttons like DS buttons */
  a, button {
    --mdc-filled-button-container-shape: 4px; /* 0.25rem */
    border-radius: var(--uq-border-radius);
  }
  /* END buttons like DS buttons */

  /* put a gap at the bottom of the sidebar */
  [role="navigation"].account-menu-container, /* on the Account pages */
  .filters-side-bar-content /* on brief results pages  */
  {
    margin-bottom: 50px;
  }
  /* END put a gap at the bottom of the sidebar */

  /* move the "too many main menu items" overflow popup down, to match OTB position against the main menu */
  & > .cdk-overlay-container > .cdk-global-overlay-wrapper:has(.show-more-main-menu-out-inner-wrapper-ul) {
    top: 230px;
  }
  @media only screen and (max-width: 1024px) {
    & > .cdk-overlay-container > .cdk-global-overlay-wrapper:has(.show-more-main-menu-out-inner-wrapper-ul) {
      top: 170px;
    }
  }
  @media only screen and (max-width: 708px) {
    & > .cdk-overlay-container > .cdk-global-overlay-wrapper:has(.show-more-main-menu-out-inner-wrapper-ul) {
      top: 196px;
    }
  }
  /* END move the "too many main menu items" overflow popup down, to match OTB position against the main menu */

  /* move the account button into the site header */
  button.user-area-btn {
    margin-top: -165px;
    @media (max-width: 707px) {
      margin-top: -215px;
    }
  }
  /* END move the account button into the site header */

  /* Login button icon is a bit too bright, compared to other icons */
  [aria-label=" Log In"] svg {
    opacity: 60%;
  }
  /* END Login button icon is a bit too bright, compared to other icons */

  /* highlight the searched term */
  .font-style-normal {
    font-weight: 600;
  }
  /* END highlight the searched term */

  /* Disable Background-Image Overlay on primo homepage */
  .custom-search-bar-container .background-overlay {
    display: none;
  }
  /* END Disable Background-Image Overlay on primo homepage */

  /* Note: nde-logo is hidden in exlibris-primo repo custom.css file, to give fastest removal */

  /* style the main search bar to be like search portal on drupal */
  .top-bar-container nde-search-bar-presenter .search-bar-container .search-bar-wrapper {
    background-color: #fff !important;
    border-radius: var(--uq-border-radius) !important;
    border: 1px solid #dcdcdd !important;
    padding-left: 0 !important;
    input {
      padding-left: 1.4rem;
    }
  }
  /* END style the main search bar to be like search portal on drupal */

  /* panels should look like DS */
  &:not(:has(nde-account)) mat-card-content {
    background-color: #fff;
    border: 1px solid #dcdcdd;
    border-radius: var(--uq-border-radius);
  }
  /* END panels should look like DS */

  /* locations panel to be DS styled */
  .getit-location-card.mat-elevation-z0.ng-star-inserted {
    border-radius: var(--uq-border-radius);
    nde-location-items-container > div {
      border-radius: var(--uq-border-radius);
    }
  }
  /* END locations panel to be DS styled */

  /* fonts on librarian controlled text */
  .restricted-public-note {
    font-weight: 400;
    font-size: 1rem;
  }
  /* END fonts on librarian controlled text */

  /* boxes with border should be DS styled */
  nde-linked-data-recommendations,
  nde-collapsible-box {
    mat-expansion-panel.mat-expansion-panel {
      border: 1px solid var(--border);
    }
  }
  /* END boxes with border should be DS styled */

  /* Disable Browse Carousel on Full Record display */
  div:has(> nde-full-display-service-container):has(nde-virtual-browse) {
    display: none;
  }
  /* END Disable Browse Carousel */

  /* nde-search-results-top-bar contents must remain readable */
  nde-results-range {
    min-width: 70px;
  }
  /* END nde-search-results-top-bar contents must remain readable */

  /* remove the built in "line between sections" and replace built in "line between sections" with "DS style box around panel" */
  mat-accordion mat-divider {
    border-width: 0;
  }
  mat-accordion > div {
    border: 1px solid var(--border);
    border-radius: var(--uq-border-radius);
  }
  mat-accordion > div {
    margin-bottom: 2rem;
  }
  /* END remove the built in "line between sections" and replace built in "line between sections" with "DS style box around panel" */


  /* page title colour */
  &:not(:has(nde-search-results)) nde-record-title a span,
  nde-person-entity.ng-star-inserted nde-entity-layout.ng-star-inserted .entity-container .entity-details .entity-name // star classes to force the specificity
  {
    color: #333;
    font-weight: 500;
  }

  nde-record-title a.not-linkable span,
  nde-record-title a.not-linkable nde-highlight,
  nde-person-entity.ng-star-inserted nde-entity-layout.ng-star-inserted .entity-container .entity-details .entity-name // star classes to force the specificity
  {
    color: var(--uq-colour-black);
    font-weight: 500;
  }
  /* END page title colour */

  /* make popover infos less intrusive */
  .cdk-overlay-container:has(mat-tooltip-component) * {
    font-size: 14px;
  }
  /* END make popover infos less intrusive */

  /* style "did you mean" div as alert  */
  [data-qa="did_you_mean"] {
    background-color: var(--uq-color-utility-50);
    padding: 1rem;
    margin-block: 1rem;
    text-align: center;
    border-radius: var(--uq-border-radius);
  }
  /* END style "did you mean" div as alert  */
  /* END page title colour */
}

@media (max-width: 1919.9px) {
  body:has(nde-custom-snack-bar nde-login) proactive-chat::part(minimised-buttons) {
    bottom: 8rem;
  }
}

.standardWarningBanner {
  margin-inline:.9375rem;
  margin-bottom: 2rem;
  display: flex;
  background-color: var(--uq-warning-50);
  border-color: var(--uq-warning-50);
  border-radius: 3px;
  color: #000;
  padding: 2em 1em;

  p {
    color: var(--uq-colour-grey-900);
  }
  a {
    text-decoration: underline;
    &:hover,
    &:focus {
      background-color: var(--uq-main-purple);
      color: #fff !important;
      box-shadow: none
    }
  }
  & > p {
    margin-left: 1.5rem;
    margin-bottom: 0;
  }

  & > div {
    margin-left: 1rem;
  }
}

.uq-icon:before {
  content: "";
  display: inline-block;
  margin: 0 .3em 0 0;
  height: 1.5em;
  width: 1.5em;
  filter: invert(20%) sepia(34%) saturate(1979%) hue-rotate(239deg) brightness(97%) contrast(107%);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
  vertical-align: text-bottom
}

.uq-icon--standard--exclamation-triangle:before {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M20.127 18.545a1.18 1.18 0 0 1-1.055 1.706H4.929a1.18 1.18 0 0 1-1.055-1.706l7.072-14.143a1.179 1.179 0 0 1 2.109 0l7.072 14.143Z' stroke='%23000' stroke-width='1.5'%3e%3c/path%3e%3cpath d='M12 9v4' stroke='%23000' stroke-width='1.5' stroke-linecap='round'%3e%3c/path%3e%3ccircle cx='11.9' cy='16.601' r='1.1' fill='%23000'%3e%3c/circle%3e%3c/svg%3e")
}

